--- a/css/styles_view.css
+++ b/css/styles_view.css
@@ -21,7 +21,8 @@ main {
     color: #fff;
     background: rgba(0, 79, 169, 0.7);
     width: 120px;
-    padding: 10px;
+    min-height: 30px;
+    padding-left: 5px;
     cursor: pointer;
 }
 
@@ -37,18 +38,19 @@ main {
     color: #fff;
     background: linear-gradient(to bottom, rgba(0, 79, 169, 1), rgba(30, 144, 255, 0.7));
     width: 120px;
-    padding: 10px;
+    min-height: 30px;
+    padding-left: 5px;
     cursor: pointer;
 }
 
 .starter-style {
     position: absolute;
     top: 530px;
-    text-align: left;
     color: #fff;
     font-size: 30px;
     background: linear-gradient(to bottom, rgba(30, 144, 255, 0.7), rgba(0, 79, 169, 1));
-    padding: 10px;
+    min-height: 30px;
+    padding-left: 5px;
     cursor: pointer;
 }
 
@@ -56,40 +58,41 @@ main {
     position: absolute;
     left: 30px;
     width: 90px;
-    text-align: center;
+    text-align: right;
+    padding-right: 5px;
 }
 
 #vorname {
     position: absolute;
-    left: 150px;
+    left: 140px;
     width: 220px;
     text-align: left;
 }
 
 #name {
     position: absolute;
-    left: 400px;
+    left: 370px;
     width: 270px;
     text-align: left;
 }
 
 #verein {
     position: absolute;
-    left: 700px;
+    left: 650px;
     width: 470px;
     text-align: left;
 }
 
 #verband {
     position: absolute;
-    left: 1200px;
+    left: 1130px;
     width: 120px;
     text-align: left;
 }
 
 #nation {
     position: absolute;
-    left: 1350px;
-    width: 100px;
+    left: 1260px;
+    width: 80px;
     text-align: left;
 }
